<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/less_black"
    android:padding="@dimen/less_padding">

    <TextView
        android:id="@+id/title"
        style="@style/LessText.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_apps" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

    <View
        style="@style/LessDivider"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/actionAdd"
        style="@style/LessText.Action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/add_application"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/actionReset"
        style="@style/LessText.Action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/reset_defaults"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/actionDone"
        style="@style/LessText.Action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/done"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>
