<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/less_row_padding_normal"
    android:paddingBottom="@dimen/less_row_padding_normal">

    <TextView
        android:id="@+id/label"
        style="@style/LessText.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/moveUp"
            style="@style/LessText.Action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move_up"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/moveDown"
            style="@style/LessText.Action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move_down"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/remove"
            style="@style/LessText.Action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>
